--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "icons": {
     "128": "/images/logo.png"
   },
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "declarativeContent", "scripting"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
